<resources>
    <string name="app_name">My Calories</string>
    <string name="tituloAM">Iniciar Sesion</string>
    <string name="field_correo">Correo</string>
    <string name="field_pwd">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="field_nombre">Nombre</string>
    <string name="field_Telefono">Telefono</string>
    <string name="field_Altura">Altura</string>
    <string name="field_Altura_hint">En metros (1.70)</string>
    <string name="field_Peso">Peso</string>
    <string name="field_Peso_hint">En Kilogramos (65.0)</string>
    <string name="field_BMI">BMI</string>
    <string name="userData">Datos</string>
    <string name="title_activity_principal">principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Mi Perfil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_alimento">Nombre del alimento</string>
    <string name="msg_calorias">Cantidad de calorias</string>
    <string name="bt_add_alimento">Agregar alimento</string>
    <string name="msg_alimento_added">Alimento agregada</string>
    <string name="msg_data">Faltan datos</string>

    <string name="bt_update_alimento">Actualizar alimento</string>
    <string name="msg_alimento_updated">Alimento actualizado</string>

    <string name="bt_delete_alimento">Eliminar alimento</string>
    <string name="msg_alimento_deleted">Alimento eliminado</string>
    <string name="msg_pregunta_delete">Esta seguro de eliminar el alimento</string>
    <string name="msg_si">Si</string>
    <string name="msg_no">No</string>

    //Rutinas

    <string name="msg_rutina">Nombre de la rutina</string>
    <string name="msg_ejeryreps">Especificaciones de la rutina</string>
    <string name="msg_reposo">Tiempo de descanso</string>
    <string name="bt_add_rutina">Agregar Rutina</string>
    <string name="msg_rutina_added">Rutina Agregada</string>

    <string name="bt_update_rutina">Actualizar Rutina</string>
    <string name="msg_rutina_updated">Rutina Actualizada</string>
    <string name="bt_delete_rutina">Eliminar Rutina</string>
    <string name="msg_rutina_deleted">Rutina Eliminado</string>
    <string name="msg_preguntaR_deleted">Está seguro de querer eliminar la rutina?</string>

    //Recetas

    <string name="msg_nombrereceta">Nombre de la Receta</string>
    <string name="msg_receta">¿Que lleva la receta?</string>
    <string name="bt_add_receta">Agregar receta</string>
    <string name="msg_receta_added">Receta agregada</string>

    <string name="bt_update_receta">Actualizar receta</string>
    <string name="msg_receta_updated">Receta actualizado</string>

    <string name="bt_delete_receta">Eliminar receta</string>
    <string name="msg_receta_deleted">Receta eliminado</string>
    <string name="msg_preguntaRe_delete">Esta seguro de eliminar la receta</string>
    <string name="menu_home">Inicio</string>
    <string name="alimentos">Alimentos</string>
    <string name="recipe">Recetas</string>
    <string name="rutina">Rutinas</string>
    <string name="msg_nombre">Nombre</string>
    <string name="msg_telefono">Telefono</string>
    <string name="bt_add_Restaurante">Añadir restaurante</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_restaurante_Added">Restaurante añadido</string>
    <string name="bt_update_Restaurante">Actualizar restaurante</string>
    <string name="bt_delete_Restaurante">Eliminar Restaurante</string>
    <string name="msg_preguntaRestaurant_delete">Esta seguro que desea eliminar el restaurante</string>
    <string name="restaurante">Restaurantes</string>
    <string name="msg_phone_call">Realizar llamada telefonica</string>
    <string name="mycalories">MY CALORIES</string>


</resources>