<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_alimento"
            android:icon="@drawable/ic_food"
            android:title="@string/alimentos"/>
        <item
            android:id="@+id/nav_receta"
            android:icon="@drawable/ic_recipe"
            android:title="@string/recipe" />
        <item
            android:id="@+id/nav_rutinas"
            android:icon="@drawable/ic_rutina"
            android:title="@string/rutina" />
        <item
            android:id="@+id/nav_restaurantes"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/restaurante" />
    </group>
</menu>