<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.rutinas.UpdateRutinasFragment" >

    <EditText
        android:id="@+id/etRutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_rutina"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEjeryreps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_ejeryreps"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etReposo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_reposo"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btUpdateR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_update_rutina" />

    <Button
        android:id="@+id/bt_deleteR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_delete_rutina" />
</LinearLayout>