<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.alimentos.UpdateAlimentoFragment" >

    <EditText
        android:id="@+id/etNombrereceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombrereceta"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etReceta"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/msg_receta"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_update_receta" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_delete_receta" />

</LinearLayout>