<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mycalories.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_alimento"
            app:destination="@id/nav_alimento" />
        <action
            android:id="@+id/action_nav_profile_to_addRutinasFragment"
            app:destination="@id/addRutinasFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_alimento"
        android:name="com.mycalories.ui.alimentos.AlimentoFragment"
        android:label="Alimentos"
        tools:layout="@layout/fragment_alimento" >
        <action
            android:id="@+id/action_nav_alimento_to_nav_profile"
            app:destination="@id/nav_profile" />
        <action
            android:id="@+id/action_nav_alimento_to_addAlimentoFragment2"
            app:destination="@id/addAlimentoFragment" />
        <action
            android:id="@+id/action_nav_alimento_to_updateAlimentoFragment"
            app:destination="@id/updateAlimentoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mycalories.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addAlimentoFragment"
        android:name="com.mycalories.ui.alimentos.AddAlimentoFragment"
        android:label="fragment_add_alimento"
        tools:layout="@layout/fragment_add_alimento" >
        <action
            android:id="@+id/action_addAlimentoFragment_to_nav_alimento2"
            app:destination="@id/nav_alimento" />
        <action
            android:id="@+id/action_addAlimentoFragment_to_updateAlimentoFragment"
            app:destination="@id/updateAlimentoFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateAlimentoFragment"
        android:name="com.mycalories.ui.alimentos.UpdateAlimentoFragment"
        android:label="fragment_update_alimento"
        tools:layout="@layout/fragment_update_alimento" >
        <argument
            android:name="alimento"
            app:argType="com.mycalories.model.Alimento" />
        <action
            android:id="@+id/action_updateAlimentoFragment_to_addAlimentoFragment"
            app:destination="@id/addAlimentoFragment" />
        <action
            android:id="@+id/action_updateAlimentoFragment_to_nav_alimento"
            app:destination="@id/nav_alimento" />
    </fragment>
    <fragment
        android:id="@+id/addRutinasFragment"
        android:name="com.mycalories.ui.rutinas.AddRutinasFragment"
        android:label="@string/bt_add_rutina"
        tools:layout="@layout/fragment_add_rutinas" >
        <action
            android:id="@+id/action_addRutinasFragment_to_nav_profile"
            app:destination="@id/nav_profile" />
        <action
            android:id="@+id/action_addRutinasFragment_to_rutinasFragment"
            app:destination="@id/rutinasFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateRutinasFragment"
        android:name="com.mycalories.ui.rutinas.UpdateRutinasFragment"
        android:label="@string/bt_update_rutina"
        tools:layout="@layout/fragment_update_rutinas" >
        <action
            android:id="@+id/action_updateRutinasFragment_to_rutinasFragment"
            app:destination="@id/rutinasFragment" />
        <argument
            android:name="rutina"
            app:argType="com.mycalories.model.Rutinas" />
    </fragment>
    <fragment
        android:id="@+id/rutinasFragment"
        android:name="com.mycalories.ui.rutinas.RutinasFragment"
        android:label="fragment_rutinas"
        tools:layout="@layout/fragment_rutinas" >
        <action
            android:id="@+id/action_rutinasFragment_to_addRutinasFragment"
            app:destination="@id/addRutinasFragment" />
        <action
            android:id="@+id/action_rutinasFragment_to_updateRutinasFragment"
            app:destination="@id/updateRutinasFragment" />
    </fragment>
</navigation>